--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>창동 맛집 모음</title>
+    <!-- head include -->
+    <%- include('./include/head') %>
   </head>
-  <body></body>
+  <body>
+    <!-- header include -->
+
+    <!-- footer include -->
+  </body>
 </html>
