--- a/views/suggestions/suggestionWrite.ejs
+++ b/views/suggestions/suggestionWrite.ejs
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>건의사항 작성</title>
+        <%- include('../include/head.ejs') %>
     </head>
     <body>
         <form action="/suggestion/writePost" method="post">
@@ -11,5 +12,6 @@
             <input type="text" name="content" /><br />
             <button>등록</button>
         </form>
+        <a href="/suggestion/list"> <input type="button" value="목록" /></a>
     </body>
 </html>
