--- a/views/suggestions/suggestionWrite.ejs
+++ b/views/suggestions/suggestionWrite.ejs
@@ -12,6 +12,6 @@
             <input type="text" name="content" /><br />
             <button>등록</button>
         </form>
-        <a href="/suggestion/list"> <input type="button" value="목록" /></a>
+        <a href="/suggestion/list?page=1"> <input type="button" value="목록" /></a>
     </body>
 </html>
