--- a/views/suggestions/suggestionPost.ejs
+++ b/views/suggestions/suggestionPost.ejs
@@ -26,7 +26,7 @@
                     <td><%= postInfo.User.nickname %></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><%= postInfo.content %></td>
+                    <td colspan="2"><%- postInfo.content %></td>
                 </tr>
                 <tr>
                     <td colspan="2">
