Feat: 식당 상세페이지

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,13 @@
     </head>
     <body>
         <!-- header include -->
+        <a href="/restaurantDetail/1"
+            ><img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScXpE_0Ni9xnQquNo5TZmqxaihVCcOUZVdWQ&usqp=CAU"
+                alt="식당이미지"
+                width="400px"
+                height="300px"
+        /></a>
 
         <!-- footer include -->
     </body>
