--- a/views/suggestions/suggestionPost.ejs
+++ b/views/suggestions/suggestionPost.ejs
@@ -37,7 +37,23 @@
                 </tr>
             </table>
         </div>
-        <a href="/suggestion/list?page=1"><button type="button">목록</button></a>
-        <script></script>
+        <div class="btn-group">
+            <a href="/suggestion/list?page=1"><button type="button">목록</button></a>
+            <a
+                href="/suggestion/delete?post=<%= postInfo.sug_index %>"
+                onclick="return confirmDel()"
+                ><button>삭제</button></a
+            >
+        </div>
+        <script>
+            function confirmDel() {
+                const isDelete = confirm("게시글을 삭제하시겠습니까?");
+                if (isDelete) {
+                    return true;
+                } else {
+                    return false;
+                }
+            }
+        </script>
     </body>
 </html>
