bcrypt 암호화 로그인 기능, 세션 오류 발생

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,14 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>창동 맛집 모음</title>
         <!-- head include -->
-        <!-- < include('./include/head') %> -->
+        <%- include('./include/head') %>
 
-        <!-- axios CDN -->
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </head>
     <body>
         <!-- header include -->
-        <!-- < include('header') %> -->
+        <%- include('header') %>
 
         <h1>창맛모</h1>
         <p>여기는 홈입니다..🐧</p>
