--- a/views/join.ejs
+++ b/views/join.ejs
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-    <!-- < include('include/head', {title: '회원가입'}) %> -->
+    <%- include('include/head', {title: '회원가입'}) %>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
 
-    <!-- axios CDN -->
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -22,8 +20,6 @@
         <input id="nickname" type="text" name="nickname" required /><br />
         <label for="email">이메일</label>
         <input id="email" type="email" name="email" required /><br />
-        <label for="phone">휴대폰 번호</label>
-        <input id="phone" type="text" name="phone" required /><br />
         <button type="button" onclick="register();">회원가입</button>
     </form>
     <a href="/login">로그인 페이지로</a>
@@ -46,7 +42,6 @@
                     pw: form.pw.value,
                     nickname: form.nickname.value,
                     email: form.email.value,
-                    phone: form.phone.value,
                 },
             })
                 .then((res) => {
