--- a/views/join.ejs
+++ b/views/join.ejs
@@ -6,23 +6,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
-
+    <link rel="stylesheet" href="/static/css/join.css" />
 </head>
 
 <body>
-    <h1>회원가입</h1>
+    <div class="login_form">
+    <h1>회원가입</h1> <br />
     <form name="form_register">
-        <label for="id">아이디</label>
-        <input id="id" type="text" name="id" required /><br />
+        <label for="id">아이디
+        <input id="id" type="text" name="id" required />
+        <button id="checkid" type="button" name ="checkid">중복확인</button></label><br />
         <label for="pw">비밀번호</label>
         <input id="pw" type="password" name="pw" required /><br />
         <label for="nickname">닉네임</label>
         <input id="nickname" type="text" name="nickname" required /><br />
         <label for="email">이메일</label>
-        <input id="email" type="email" name="email" required /><br />
+        <input id="email" type="email" name="email" required /><br /><br /><br />
         <button type="button" onclick="register();">회원가입</button>
     </form>
     <a href="/login">로그인 페이지로</a>
+    </div>
 
     <script>
         // POST /join
@@ -47,8 +50,6 @@
                 .then((res) => {
                     console.log("응답 데이터", res.data);
                     alert("회원가입 성공!");
-
-                    // 가입 성공시, 로그인 페이지로 이동
                     document.location.href = "/login";
                 });
         }
