--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <!-- < include('include/head', {title: '로그인'}) %> -->
+    <%- include('include/head', {title: '로그인'}) %>
     <link rel="stylesheet" href="/static/css/login.css" />
-
-    <!-- axios CDN -->
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="login-box">
@@ -75,6 +72,8 @@
             alert("로그인 성공");
             formInfo.id.value = form.id.value;
             formInfo.submit();
+
+            document.location.href = "/";
           }
           else {
             alert("로그인 실패");
