--- a/views/restaurantDetail.ejs
+++ b/views/restaurantDetail.ejs
@@ -26,7 +26,7 @@
                 background-color: aliceblue;
             }
             .review {
-                height: 1200px;
+                height: 1600px;
             }
             .description {
               display: flex;
@@ -86,7 +86,7 @@
             <h2>위치</h2>
             <div>
                 <span>- 주소 : <%=restaurant.rest_address%></span>
-                <span style="margin-left: 50%;"><a href="#">이동</a></span>
+                <span style="margin-left: 50%;"></span>
                 <img
                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR98UFqnLabe4Wk9DGom8PxcWiCeSqYMPyztHzrdsnfVl79zzB00_ZCpJwnL6g7juOeAN0&usqp=CAU"
                     alt="위치 지도"
@@ -104,7 +104,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                         <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                         </svg></i><span><%= review.User.nickname%></span> |
-                        <span><%=review.createdAt %></span>
+                        <% const originalDate = new Date(review.createdAt);
+                        const formattedDate = originalDate.toLocaleString('ko-KR', {timeZone: 'Asia/Seoul', hour12: false});
+                        %>
+                        <span><%=formattedDate %></span>
                         <p><%= review.review_content%></p>
                     </div>
                 <% } %>
