--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -293,10 +293,12 @@
         </div>
 
         <div class="buttons">
-            <button id="signupBtn" class="signBtn">회원가입</button>
-            <button id="loginBtn" class="signBtn">로그인</button>
-
-            <button id="logoutBtn" style="display: none" class="signBtn">로그아웃</button>
+            <%if (isLogin) { %>
+            <button id="signupBtn" class="signBtn" href="/user/join">회원가입</button>
+            <button id="loginBtn" class="signBtn" href="/user/login">로그인</button>
+            <% } else { %>
+            <button id="logoutBtn" style="display: none" class="signBtn" href="/user/logout">로그아웃</button>
+            <% } %>
         </div>
     </div>
 
