--- a/views/suggestions/suggestionPost.ejs
+++ b/views/suggestions/suggestionPost.ejs
@@ -15,10 +15,10 @@
                 border: 1px solid #dadada;
                 box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.08);
             }
-            table tr:nth-child(3) {
+            .table tr:nth-child(3) {
                 height: 300px;
             }
-            table tr:last-child td {
+            .table tr:last-child td {
                 text-align: center;
             }
             .btn-group {
