--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -3,32 +3,17 @@
     <div class="container">
         <div>
             <a href="">
-                <img
-                    class="logo"
-                    src="../static/images/CMM.png"
-                    alt=""
-                    style="width: auto; height: 200px; margin-bottom: 20px; flex: 0 0 auto"
-                />
+                <img class="logo" src="../static/images/CMM.png" alt=""
+                    style="width: auto; height: 200px; margin-bottom: 20px; flex: 0 0 auto" />
             </a>
         </div>
         <div>
             <div class="search" style="width: 500px; margin-top: 0px; flex: 1">
-                <div
-                    class="collapse navbar-collapse d-flex justify-content-center"
-                    id="navbarSupportedContent"
-                >
+                <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
                     <div class="d-flex" role="search" style="width: 500px">
-                        <input
-                            class="form-control me-2"
-                            type="search"
-                            placeholder="search"
-                            aria-label="Search"
-                            id=""
-                        />
+                        <input class="form-control me-2" type="search" placeholder="search" aria-label="Search" id="" />
                         <button class="btn" type="button" id="">
-                            <img
-                                src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png"
-                            />
+                            <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png" />
                         </button>
                     </div>
                 </div>
@@ -49,13 +34,20 @@
         </div>
 
         <div class="buttons">
+            <!-- 로그인 유무에 따른 헤더 변경 -->
             <%if (isLogin) { %>
-            
-            <button id="signupBtn" class="signBtn" >회원가입</button>
-            <button id="loginBtn" class="signBtn" >로그인</button>
-            <% } else { %>
-            <button id="logoutBtn" style="display: none" class="signBtn" >로그아웃</button>
-            <% } %>
+                <p>
+                    <%= user %>님 환영합니다.
+                </p>
+                <form name="form_logout" action="/form/logout" method="post">
+                    <button id="logoutBtn" class="signBtn" type="submit">로그아웃</button>
+                </form>
+
+                <% } else { %>
+
+                    <button id="signupBtn" class="signBtn">회원가입</button>
+                    <button id="loginBtn" class="signBtn">로그인</button>
+                    <% } %>
         </div>
     </div>
 
@@ -68,11 +60,11 @@
             </div>
             <a href=""><span class="signupLabel" id="closeModalBtn">닫기</span></a>
 
-            <form name="form_info" action="/" method="POST">
+            <form name="form_info" action="/index" method="post">
                 <input type="hidden" name="nickname" />
             </form>
 
-            <form id="modal_login" action="/user/login" method="post">
+            <form id="modal_login" action="/form/login" method="post">
                 <!-- 아이디 -->
                 <div>
                     <h3>
@@ -105,44 +97,6 @@
         </div>
     </div>
 
-    <script>
-            document.getElementById('modal_login').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent form submission
-            const formInfo = document.forms["form_info"];
-          const form = document.forms["modal_login"];
-  
-          if (!form.checkValidity()) {
-            form.reportValidity();
-            return;
-          }
-  
-          axios({
-            url : "/include/header",
-            method : "POST",
-            data: {
-              id: form.id.value,
-              pw: form.pw.value,
-            },
-          })
-          .then((res) => {
-            const { data } = res;
-            console.log(">>>>>>>>>>>>>>>>>>>>>>>>>>>",res);
-  
-            if (data) {
-              alert("로그인 성공");
-            //   formInfo.id.value = form.id.value;
-            //   formInfo.submit();
-  
-            }
-            else {
-              alert("로그인 실패");
-              form.reset();
-            }
-          })
-          .catch((err) => console.err(err));
-        });
-    </script>
-
     <!-- 회원가입 팝업창 -->
     <div id="signupModal" class="modal">
         <div class="modal-content">
@@ -151,24 +105,19 @@
                 <img src="../static/images/CMM.png" width="150px" height="200px" />
             </div>
             <a href=""><span class="signupLabel" id="closeModalBtn">닫기</span></a>
-            <form id="form_register" name="form_register" action="/user/join" method="post">
+            <form id="modal_register" name="modal_register" action="/form/register" method="post">
                 <!-- 아이디 -->
                 <div>
                     <h3>
                         <label for="id">아이디</label>
                     </h3>
                     <span class="box intId">
-                        <input
-                            type="text"
-                            name="id"
-                            class="int"
-                            maxlength="20"
-                            placeholder="7글자 이하로 작성해주세요."
-                            required
-                        />
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckId">중복확인</button></span
-                        >
+                        <input type="text" name="id" id="inputId" class="int" maxlength="20" onkeydown="inputIdCk()" required />
+                        <!-- 타입을 btn에서 input으로 수정 -->
+                        <span class="stepbutton">
+                            <button id="btnCheckId" onclick="idCheck()">중복확인</button>
+                            <input type="hidden" name="idDuplication" id="idDuplication" value="idUncheck">
+                        </span>
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -179,7 +128,7 @@
                         <label for="pswd1">비밀번호</label>
                     </h3>
                     <span class="box intPw">
-                        <input type="password" name="pw" class="int" maxlength="20" required />
+                        <input type="password" name="pw" class="int" maxlength="20" id=pw required />
                         <span id="alertTxt">사용불가</span>
                     </span>
                     <span class="error_next_box"></span>
@@ -191,7 +140,7 @@
                         <label for="pswd2">비밀번호 재확인</label>
                     </h3>
                     <span class="box intPwCheck">
-                        <input type="password" name="pwCheck" class="int" maxlength="20" />
+                        <input type="password" name="pwCheck" class="int" maxlength="20" id=pwCk />
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -202,17 +151,9 @@
                         <label for="name">닉네임</label>
                     </h3>
                     <span class="box intName">
-                        <input
-                            type="text"
-                            name="nickname"
-                            class="int"
-                            maxlength="20"
-                            placeholder="7글자 이하로 작성해주세요."
-                            required
-                        />
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckName">중복확인</button></span
-                        >
+                        <input type="text" name="nickname" class="int" maxlength="20" placeholder="7글자 이하로 작성해주세요."
+                            required />
+                        <span class="stepbutton"><button type="button" id="btnCheckName">중복확인</button></span>
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -223,25 +164,21 @@
                         <label for="email">이메일</label>
                     </h3>
                     <span class="box intEmail">
-                        <input type="email" name="email" class="int" maxlength="100" required/>
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckName">확인코드전송</button></span
-                        >
+                        <input type="email" name="email" class="int" maxlength="100" required />
+                        <span class="stepbutton"><button type="button" id="btnCheckName">확인코드전송</button></span>
                     </span>
                     <span class="error_next_box">이메일 주소를 다시 확인해주세요.</span>
                 </div>
 
                 <!-- 이메일 확인 -->
-                <!-- 태그명, 변수명 오류 있습니다!!!!!!! -->
+                <!-- 태그명, 변수명 오류 있습니다!!!!!!! 제 임의로 바꿔놓았습니다!! -->
                 <div>
                     <h3>
                         <label for="name">이메일 확인</label>
                     </h3>
                     <span class="box intName">
                         <input type="text" name="name" class="int" maxlength="20" />
-                        <span class="stepbutton"
-                            ><button type="button" id="btnCheckName">확인</button></span
-                        >
+                        <span class="stepbutton"><button type="button" id="btnCheckName">확인</button></span>
                     </span>
                     <span class="error_next_box"></span>
                 </div>
@@ -255,20 +192,60 @@
         </div>
     </div>
 
+
+
+    <!-- 비밀번호 재확인 부분 -->
     <script>
-        document.getElementById('form_register').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent form submission
-            
-          const form = document.forms["form_register"];
-  
-          if (!form.checkValidity()) {
+        let pw = document.getElementById("pw");
+        let pwCk = document.getElementById("pwCk");
+
+        function validatePassword() {
+            if (pw.value != pwCk.value) {
+                pwCk.setCustomValidity("비밀번호가 같지 않습니다.");
+            }
+            else {
+                pwCk.setCustomValidity('');
+            }
+        }
+
+        pw.onchange = validatePassword;
+        pwCk.onkeyup = validatePassword;
+    </script>
+
+    <!-- 아이디 중복화면 검사 -->
+    <script>
+        // 아이디 중복체크 화면 열기
+        function idCheck() {
+            window.name = "parentForm";
+            window.open("/user/idCheckForm", "chkForm", "width=500, height=300, resizable=no, scrollbars=no");
+
+        }
+        // 중복체크 후 다시 새로운 아이디를 입력했을 때 다시 중복체크 하도록 함
+        function inputIdCk() {
+            document.modal_register.idDuplication.value = "idUncheck";
+        }
+    </script>
+
+    <!-- 회원가입 입력값 검사 -->
+    <script>
+        document.getElementById('modal_register').addEventListener('submit', function (event) {
+            event.preventDefault();
+
+            const form = document.forms["modal_register"];
+
+            if (!form.checkValidity()) {
                 form.reportValidity();
                 return;
             }
 
+            if (form.idDuplication.value != "idCheck") {
+                alert("아이디 중복체크를 해주세요.");
+                return false;
+            }
+
             axios({
                 method: "POST",
-                url: "/user/join",
+                url: "/form/register",
                 data: {
                     id: form.id.value,
                     pw: form.pw.value,
@@ -278,7 +255,7 @@
             })
                 .then((result) => {
                     if (result) {
-                        console.log("응답 데이터", result);
+                        console.log("응답 데이터", result.id); // undefined
                         alert("회원가입 성공!");
                         document.location.href = "/";
                     }
